--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,7 +14,7 @@ layout: compress
     @import url('https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i');
     @import url('https://fonts.googleapis.com/css?family=Charmonman:400,700|Homemade+Apple');
     @import url('https://fonts.googleapis.com/css2?family=Kalam&family=Zen+Antique&display=swap');
-    
+
     @media only screen and (max-width: 30em) {
         header {
             margin-top: 10%;
@@ -87,8 +87,10 @@ layout: compress
                 <hr class="hr-line" style="margin-top:7px; opacity:100%">
                 <h3 class="title">
                     <p class='lora' style="font-size:1rem;font-weight:400">
-                        Computer Science, <br> Mathematics, <br> Statistics,<br>
-                        University of Toronto, 2026
+                        <span style = "font-weight:600">University of Toronto 2026</span><br>
+                        Computer Science <br> Mathematics & Statistics<br>
+                        
+                        
                     </p>
                 </h3>
                 <hr class="hr-line" style="margin-bottom:7px;opacity:100%">
