--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -3,7 +3,7 @@
     <ul class="dl-menu">
         <li><a href="{{ site.url }}/">Home</a></li>
 <!--        <li><a href="{{ site.url }}/about-me">About Me</a></li>-->
-         <li><a href="../assets/resume/apr-2021-resume.pdf">Resume</a></li>
+         <li><a href="../assets/resume/apr-2021-resume.pdf">About Me</a></li>
         <li><a href="{{ site.url }}/course-notes">Course Notes</a></li>
     </ul>
 </nav>
