--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -58,7 +58,7 @@ layout: compress
         display:flex; 
     }
     body::before{
-        background-image: url("../assets/img/bg.jpg");
+        background-image: url("../assets/img/BG1.jpg");
         background-size: cover;
         content: "";
         position:absolute;
@@ -109,7 +109,7 @@ layout: compress
 <!--                        About Me-->
 <!--                    </a>-->
                     <a class="btn zoombtn font" href="{{ site.url }}/about-me/">
-                      Resume
+                      About Me
                     </a>
                     <a class="btn zoombtn font" href="{{ site.url }}/course-notes/" >
                       Course Notes
